# the-collector

./: .gitignore  Cargo.toml  README.md  build.sh
.github/workflows/: rust.yml
.sqlx/: query-03b8af6f4f8fcb7e2b99aee0f913b04924064eb295f0b9ca9b60160c269ec6a6.json  query-152d33d67776ffa1148e9ff7a2bef976b29da94d775ae9c31081cf6bd852f00f.json  query-28a3da969c1e08ad1acc0fb52df495bce5a28424c05500c132ffa3f314bc4d42.json  query-324b80a36bef632c51b56e5d66b07eea4c7909e20eeb1802dd7abb8c4497db6d.json  query-3fcbd159ecd03174a11bc23bde4d297ed87acea6d52ef4d8d73b6d6832d0e3fd.json  query-4951c869de81206e23bced5881ef75d1e0c2858dbed8f44e450bcaf1296f75cc.json  query-4b6d2cc07b8323b2b3df3444d8162848daf61690a666c119c0776a2e5fd77f18.json  query-50aa2b42c28283f95c6fe29ab2234c88dec186b1c044296f7f5f141aacbb206f.json  query-50c461fe249c3281a012e26d795ede26eb91ed24a761ab07db6f9260cd0f3cc3.json  query-54983b00092688e5460b08cf3880d01a492a273b81399685aa0c1a213607d06f.json  query-8c6b141438afb3862b70b279ba9801c828cf9f9b16536941717b855ca41b8aa6.json  query-8db0337e91e54f1d2b85a824a4ba8c443358911faab9a8fb0f81f454e1e0b88c.json  query-9ec349952d64bd6dfc27e7c7a83dc7fea0f1f7c48f9b76c8526bf68b1e0a09a0.json  query-b304cc6ffffda996022bfacd2616e1d8b919fa9804545c8ac64c92c8dd866cd8.json  query-c0fb00a3a5f6ba404d1f395cd0dabc43e827ea4bb38f0dc43446c1f44424ec11.json  query-d695556af38a55542cc524e8229793bd8c50d994173f0606495b6e77e98fc80d.json
bot/: Cargo.toml
bot/src/: main.rs
bot/src/db/: mod.rs
int-bot-ipc/: Cargo.toml
lib/int-bot-db/: Cargo.toml
lib/int-bot-db/src/: model.rs
lib/the-collector-db/: Cargo.toml
lib/the-collector-db/src/: error.rs  lib.rs  model.rs
lib/the-collector-evaluation/: Cargo.toml
lib/the-collector-ipc/: Cargo.toml
lib/the-collector-ipc/src/: error.rs  (+3 more)
migrations/2023-12-22-000723_initial/: down.sql  up.sql
scripts/: generate_models.sh
src/: main.rs  match_fetcher.rs  match_subscriber.rs  riven_wrapper.rs
src/db/: mod.rs  model.rs  schema.rs
src/server/: mod.rs
the-collector/: Cargo.toml  README.md
the-collector/src/: ipc.rs  main.rs
the-collector/src/db/: mod.rs
the-collector/src/handler/: match_data.rs  mod.rs
the-collector/src/riot_api/: account.rs  match_data.rs
(+10 files in other folders)
