[package]
name = "the-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38" }
dotenv = { version = "0.15.0" }
lazy_static = { version = "1.5.0" }
riven = { version = "2.50.0" }
tokio = { version = "1.37.0", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.203" }
sqlx = { version = "0.8", features = [ "chrono", "derive", "macros", "runtime-tokio", "sqlite" ] }
bincode = "1.3.3"
nng = "1.0.1"
